--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -23,7 +26,7 @@ jobs:
 
       - name: Build
         run: |
-          NEXT_PUBLIC_BASE_PATH=/offshore-portal npm run build
+          NEXT_PUBLIC_BASE_PATH=/taxfree npm run build
           touch out/.nojekyll
 
       - name: Deploy
